fix a small gap in firefox

--- a/src/components/TabCompleteInput/TabCompleteInput.css
+++ b/src/components/TabCompleteInput/TabCompleteInput.css
@@ -58,6 +58,7 @@
     border-left: none;
     border-right: none;
     border-top: none;
+    margin: 0px;
     padding: 3px 3px;
     outline: none;
     vertical-align: bottom;
